modified css to prevent hiding addressbar on mobile for better swiping experience

--- a/public/style.css
+++ b/public/style.css
@@ -14,8 +14,17 @@
   font-size: var(--font-size);
 }
 
+html {
+  overflow: hidden;
+  width: 100%;
+}
+
 body {
-  height: 100vh;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  -webkit-overflow-scrolling: touch;
+  /* iOS velocity scrolling */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -66,7 +75,6 @@ body {
   transition: all 0.2s ease-in-out;
 }
 
-
 #settings-show-btn:hover {
   cursor: pointer;
   transform: rotate(90deg);
@@ -114,7 +122,7 @@ body {
 
 #settings-menu {
   position: absolute;
-  top: 50%; 
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: #fff;
@@ -155,17 +163,17 @@ body {
 
 #settings-close-btn {
   padding: 1vmin 3vmin;
-  border: 1px solid; 
+  border: 1px solid;
   background-color: #fff;
 }
 
 #settings-close-btn:hover {
   cursor: pointer;
-  transition: all .2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 #settings-close-btn:active {
-    background-color: rgb(231, 231, 231);
+  background-color: rgb(231, 231, 231);
 }
 
 #settings-update-btn {
